# libkepler

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  plots.ipynb  pyproject.toml
.github/workflows/: benchmark.yml  benchmarks.yml  python.yml  test.yml  wheels.yml
benchmark/: CMakeLists.txt  benchmark.cpp  benchmark_metal.cpp  get_simd_size.cpp  get_specs.cpp
benchmarks/: CMakeLists.txt  baseline.cc  brandt.cc  brandt_fixed.cc  contour16_fixed.cc  contour8.cc  contour8_fixed.cc  first.cc  nijenhuis.cc  simd.cc  third.cc
dev/bench/: data.js
include/kepler/: config.hpp  constants.hpp  householder.hpp  kepler.h  kepler.hpp  math.hpp  reduction.hpp  refiners.hpp  simd.hpp  solve.hpp  starters.hpp  utils.hpp
include/kepler/kepler/: constants.hpp  householder.hpp  math.hpp  reduction.hpp  refiners.hpp  solver.hpp  starters.hpp  utils.hpp
include/kepler/metal/: metal.hpp
include/kepler_benchmarks/: benchmark.h  brandt.h  contour.h  cuda_support.h  iterative.h  math_utils.h  nijenhuis.h  simd.h  simd.hpp  solver.h
include/kepler_benchmarks/math/: constants.hpp  trig.hpp  utils.hpp
include/kepler_benchmarks/twostep/: refiners.h  starters.h
python/: .gitignore  CMakeLists.txt  noxfile.py
python/libkepler/: _libkepler.cpp
python/test/: test_libkepler.py
refs/heads/main/: data.json  plot.html
src/: kepler.cpp
src/kepler/metal/: CMakeLists.txt  kepler.metal
test/: CMakeLists.txt  test_householder.cpp  test_math.cpp  test_reduction.cpp  test_refiners.cpp  test_solve.cpp  test_starters.cpp  test_utils.hpp
tools/benchmark_results/: collect.py  summarize.py
tools/poly_approx/: README.md  approximations.py  remez.py
