[build-system]
requires = ["scikit-build-core[pyproject]>=0.4.3", "nanobind>=1.3.2"]
build-backend = "scikit_build_core.build"

[project]
name = "libkepler"
dynamic = ["version"]
description = "A brief description of what this project does"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Dan Foreman-Mackey", email = "foreman.mackey@gmail.com" }]
classifiers = ["License :: BSD"]
dependencies = ["numpy"]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/dfm/libkepler"

[tool.scikit-build]
cmake.source-dir = "python"
wheel.packages = ["python/libkepler"]
cmake.verbose = true
logging.level = "INFO"
minimum-version = "0.4"
build-dir = "build/{wheel_tag}"
wheel.py-api = "cp312"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["python/libkepler/_version.py"]

[tool.setuptools_scm]
write_to = "python/libkepler/_version.py"

[tool.cibuildwheel]
build-verbosity = 1
test-command = "pytest {project}/python/test"
test-requires = "pytest"

[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"
